--- a/work1.html
+++ b/work1.html
@@ -5,6 +5,11 @@
   <title>WORK 1 인터뷰 - 박지현</title>
   <link rel="stylesheet" href="../style.css">
 
+<!-- 상단 제목 아래, 또는 원하는 위치에! -->
+<a href="index.html" class="home-btn" style="display:inline-block; margin-bottom:24px; font-weight:bold; color:#222; text-decoration:none;">
+  ← 홈으로 돌아가기
+</a>
+  
   <style>
     body {
       background: #f9f9f9;
@@ -69,10 +74,7 @@
 </head>
 <body>
   <div class="interview-wrap">
-    <a href="../index.html" class="home-btn">← 홈으로 돌아가기</a>
     <div class="interview-title">박지현 인터뷰</div>
-
-    <!-- 상세페이지 상단 이미지 (필요 없으면 이 줄 삭제해도 됨) -->
     <img src="work/work1_main.png" alt="박지현 이미지" class="interview-img">
 
     <div class="q">♥︎가장 좋아하는 장소♦︎</div>
