--- a/work4.html
+++ b/work4.html
@@ -5,6 +5,11 @@
   <title>WORK 4 인터뷰 - 이예지</title>
   <link rel="stylesheet" href="../style.css">
 
+<!-- 상단 제목 아래, 또는 원하는 위치에! -->
+<a href="index.html" class="home-btn" style="display:inline-block; margin-bottom:24px; font-weight:bold; color:#222; text-decoration:none;">
+  ← 홈으로 돌아가기
+</a>
+  
   <style>
     body {
       background: #f9f9f9;
@@ -70,13 +75,8 @@
 
 <body>
   <div class="interview-wrap">
-    <a href="../index.html" class="home-btn">← 홈으로 돌아가기</a>
-
     <div class="interview-title">이예지 인터뷰</div>
-
-    <!-- 상세 페이지 상단 메인이미지 -->
-    <img src="../work/work4_main.png" alt="이예지 이미지" class="interview-img">
-
+    <img src="work/work4_main.png" alt="이예지 이미지" class="interview-img">
 
     <div class="q">하고 있는 일</div>
     <div class="a">법률 사무원.</div>
