--- a/love1.html
+++ b/love1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>LOVE 1 인터뷰 - 박주희</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="style.css">
 
   <style>
     body {
