--- a/love2.html
+++ b/love2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>LOVE 2 인터뷰 - 이승미</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="style.css">
 
   <style>
     body {
