--- a/love23.html
+++ b/love23.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>COMING SOON</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="style.css">
 
   <style>
     body {
