--- a/love3.html
+++ b/love3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>LOVE 3 인터뷰 - 박하랑</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="style.css">
 
   <style>
     body {
