--- a/love4.html
+++ b/love4.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>LOVE 4 인터뷰 - 김희연</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="style.css">
 
   <style>
     body {
