--- a/love6.html
+++ b/love6.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>LOVE 6 인터뷰 - 고명조</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="style.css">
 
   <style>
     body {
