--- a/work2.html
+++ b/work2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>WORK 2 인터뷰 - 박주민</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="style.css">
 
 <!-- 상단 제목 아래, 또는 원하는 위치에! -->
 <a href="index.html" class="home-btn" style="display:inline-block; margin-bottom:24px; font-weight:bold; color:#222; text-decoration:none;">
