--- a/work5.html
+++ b/work5.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>WORK 5 인터뷰 - 박유선</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="style.css">
 
   <style>
     body {
