--- a/work6.html
+++ b/work6.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>WORK 6 인터뷰 - 허유정</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="style.css">
 
   <style>
     body {
