--- a/work4.html
+++ b/work4.html
@@ -130,7 +130,7 @@
 
     <div class="q">직업을 선택할 때 믿어줬던, 사랑하는 사람에 대해 말해줄 수 있나요?</div>
     <div class="a">
-지금 제 앞에 있는 지영이요.  
+지금 제 앞에 있는 지영이요. (에디터: 감동!)
 그때 같이 공부를 하던 시기였는데, 지영이는 제가 뭘 하든 100% 믿어주던 사람이었어요.
     </div>
 
