--- a/love5.html
+++ b/love5.html
@@ -73,7 +73,7 @@
     <div class="a">귤. 방금도 하나 먹고 왔어요.</div>
 
     <div class="q">♥︎가장 좋아하는 계절♦︎</div>
-    <div class="a">한국에서는 겨울을 좋아했는데, 호주에 와보니 봄·여름이 제일 예쁘고 좋아졌어요.</div>
+    <div class="a">한국에서는 겨울을 좋아했는데, 호주에 와보니 봄·여름이 제일 예쁘 것 같아서 좋아졌어요.</div>
 
     <div class="q">♥︎하고 싶은 말♦︎</div>
     <div class="a">오하아사를 매일 확인하자!</div>
@@ -81,123 +81,130 @@
     <div class="q">사랑하는 것</div>
     <div class="a">읽고 씀.</div>
 
-    <div class="q">최근 읽거나 쓰고 있는 건?</div>
+    <div class="q">최근 읽거나 쓰고 있는 건 뭐예요?</div>
     <div class="a">
-최근에는 논픽션을 위주로 읽고 있어요. 감정을 덜 쓰는, 차가운 글들을 찾게 되더라고요.  
-지바 마사야의 『현대사상 입문』, 캐럴라인 냅의 『욕구들』을 읽는 중이에요.
+최근에는 논픽션을 위주로 읽고 있어요. 덜 감정적이고 차가운 글들을 많이 읽으려고 노력하는 중이에요. 
+최근에는 지바 마사야의 '현대사상 입문'과 캐럴라인 냅의 '욕구들'을 읽고 있습니다. 
     </div>
 
-    <div class="q">논픽션을 읽게 된 이유는?</div>
+    <div class="q">논픽션을 읽게 된 이유는 뭐예요?</div>
     <div class="a">
-여러 가지가 겹쳤어요. 요즘 감정을 쓸 일이 많았고, 안정적이지 않을 때 픽션을 읽으면  
-타인의 인생에 들어갔다 나오는 과정이 더 힘들더라고요.  
-시간과 체력도 부족해서 집중하기도 어렵고요.
+종합적인 이유인 것 같아요. 요즘 감정을 쓸 일이 많기도 했고요.  
+저는 소설이라는 게 타인의 인생에 한번 들어갔다 나오는 거라고 생각해서 제 자신이 안정적일 때가 아니면 읽기 힘들더라고요.
+요즘은 마음만 힘들었던 게 아니라, 물리적인 시간도, 체력도 없어서 픽션을 집중해 읽기 어려웠어요.
     </div>
 
-    <div class="q">논픽션이 지친 지호 씨에게 준 도움은?</div>
+    <div class="q">논 픽션이 몸, 마음이 지친 지호 씨에게 도움 되는 부분은 뭐였나요?</div>
     <div class="a">
-『욕구들』은 작가가 자신의 중독을 이성적으로 정리하며 성찰하는 책이에요.  
-읽다 보면 제 욕구들, 그 욕구들이 주는 죄책감에 대해  
-"나만 그런 게 아니구나"라는 위로를 받게 돼요.  
-불안이 덜어지고 마음이 편안해지는 느낌이 있어요.
+지금 읽고 있는 '욕구들'은 작가가 인생을 살면서 겪은 중독에 대해 이성적으로 나열하며 성찰하는 글이에요.  
+읽다 보면 제가 갖고 있는 욕구들, 그리고 그 욕구들 때문에 가졌던 죄책감에 대해
+'나만 그런 게 아니야'라고 위로받는 것 같더라고요.   
+작가가 가지고 있었던 욕구들에 공감하고 위로받는 과정을 통해 내면의 불안함이 덜어지는 것 같았어요. 
     </div>
 
-    <div class="q">가장 좋아하는 ‘읽을거리’는?</div>
+    <div class="q">가장 좋아하는 '읽을거리'에 대해서도 묻고 싶어요.</div>
     <div class="a">
-저는 단편소설집 마지막에 붙어있는 ‘작품 해설’을 가장 좋아해요.  
-어쩔 때는 해설을 읽고 싶어서 단편집을 돌파해 나가요.
+저는 단편소설집 맨 마지막에 붙어있는, 작품 해설을 가장 좋아해요. 
+어떨 때는 작품 해설을 읽으려고 단편집을 돌파해나갈 때도 있어요. 
     </div>
 
-    <div class="q">작품 해설이 좋은 이유는?</div>
+    <div class="q">작품 해설이 좋다는 견해가 신선해요. 이유가 뭔지 물어봐도 될까요?</div>
     <div class="a">
-제가 생각하기 어려운 걸 다른 사람의 정확한 생각으로 만나볼 수 있어서요.  
+제가 생각하기 어려워서 다른 사람의 생각을 빌려왔어요. 
 
-"‘정확하게 사랑받고 싶었어.’ 이 말은 모든 작품이 해석자에게 하는 말이다.  
-그렇다면 해석자의 꿈은 ‘정확한 사랑’에 도달하는 일일 것이다."
+"'정확하게 사랑받고 싶었어.' 내게 이 말은 세상의 모든 작품들이 세상의 모든 해석자들에게 하는 말처럼 들렸다. 
+그렇다면 해석자의 꿈이란 ‘정확한 사랑’에 도달하는 일일 것이다." 
 
-이 문장을 좋아해요. 작품에 대한 ‘정확한 사랑’을 바탕으로  
-다듬어진 글을 읽는 순간만큼 흥분되는 때가 없거든요.
+저도 이 의견처럼 '정확하게 사랑하려는 작업이나 노력'에 마음이 동하는 것 같아요.
+작품에 대한 사랑을 바탕으로 다듬어진 완전한 글을 읽을 때만큼 흥분되는 때가 없거든요.
     </div>
 
-    <div class="q">특히 좋았던 작품 해설은?</div>
+    <div class="q">특히 좋았던 건 어떤 해설이었나요?</div>
     <div class="a">
-최은영 『내게 무해한 사람』의 해설,  
-강지희 평론가의 ‘끝내 울음을 찾는 자의 윤리’가 기억에 남아요.  
-소설이 말하고자 하는 부분을 정확하고 집요하게 밝혀낸 글이에요.
+최은영 작가의 '내게 무해한 사람', 중 강지희 평론가의 '끝내 울음을 찾는 자의 윤리'가 기억에 남아요. 
+집요할 정도로 소설이 말하고자 하는 부분을 밝혀내서 정확한 문장으로 다듬은 해설이거든요. 
 
-가장 인상 깊었던 문장은 이거예요:
+그중에서도 가장 마음에 들었던 구절을 말해볼게요.
 
-"자신이 느끼는 안도와 행복의 풍경이 상대의 외로움과 아픔을 밀봉한 결과임을  
-선연하게 의식하는 예민한 윤리...  
-어떤 눈물도 결국 자신을 위한 것일 수 있다는 나르시시즘에 대한 경계."
+'자신이 느끼는 안도와 행복의 풍경이 언제나 상대의 외로움과 아픔을 철저히 밀봉했을 때에야
+가능한 것임을 선연하게 의식하는 예민한 윤리, 이 서늘한 거리 감각이란 최은영 소설의 요체이자 매력이다.
+이것에 대해 알고 나면 왜 인물들이 쉽게 눈물을 흘리는 대신, 끝내 울음을 참아내는지도 이해할 수 있게 된다.
+어떤 눈물도 결국에는 자신을 위한 것일지도 모른다는 나르시시즘에 대한 날 선 경계가 여기에 있다.'
 
-읽으며 많은 생각을 했어요.
+이 부분이 기억에 남더라고요.
     </div>
 
-    <div class="q">해설 속 화자와 닮은 점은?</div>
+    <div class="q">해설 속 화자와 지호 씨의 닮은 점은 뭐예요?</div>
     <div class="a">
-닮았다기보다 닮고 싶은 부분이 있어요.  
-삶을 잘 살기 위해 나르시시즘과 거리를 두는 태도요.  
-요즘 저도 자아가 커지는 느낌을 받을 때가 있어서,  
-‘나에 대한 실망’을 경계하려고 노력하고 있어요.
+닮은 점이라기보다는 닮고 싶은 부분이 있는 것 같아요.
+자기 자신에게 동정이나 연민이 필요할 때도 있지만,
+결국 삶을 잘 영위하기 위해서는 나르시시즘과 거리를 두려고 하는 게 중요하거든요.
+저도 잘 안되는데 노력하고 있어요. 최근에 자아가 커지고 있다고 느낀 적이 있거든요.
+나라면 뭐든 잘할 수 있을 것 같은, 과한 나르시시즘에서 비롯된 '나에 대한 실망'같은 감정을 항상 경계하려고 합니다.
     </div>
 
-    <div class="q">읽고 쓰는 일 속 ‘사랑’은?</div>
+    <div class="q">우리 매거진이 '일과 사랑;에 대해 이야기하는 만큼 '읽고 쓰는 일' 속 '사랑'에 대해 묻고 싶어요.
+      어떨 때 가장 사랑을 느껴요? 그 사랑이 지호 씨에게 어떤 영향을 줬는지도 궁금해요. </div>
     <div class="a">
-읽고 쓰면서 느끼는 감각들이 사랑받을 때와 비슷해요.  
-지속적으로 사랑을 받으면 용기가 생기고, 실패해도 괜찮을 것 같아지잖아요.  
+제가 생각하기에는 읽고 쓰면서 느끼는 감각들이 사랑받았을 때의 느낌과 비슷해요.
+안정적인 사랑을 지속적으로 받았을 때 동반되는 긍정적인 결과들이 있잖아요.
+살아갈 용기가 생긴다거나, 실패를 해도 괜찮을 것 같다거나. 제법 괜찮은 삶의 태도들을 갖추게 되거든요.
+      
+20대 극 초반에 잠깐 힘든 시기가 있었는데, 역대급으로 우울했고, 인생이 막막해서 어떻게 살아야 하나 고민하고 있었어요.
+마침 '보건교사 안은영'이라는 책을 읽고 있었는데, 이 책을 사랑하는 사람이 많다면, 저는 살아갈 수 있겠다는 생각이 들었어요.
+구체적으로 말해보자면 이 소설을 읽으면서 '선한 마음이 있기에 누군가를 도우려고 하지만, 동시에 본인의 하루하루도 버겁게 느껴지는,
+그럼에도 불구하고 아등바등 윤리적인 것에 닿으려고 시도하는' 안은영의 상황들이 공감됐거든요.
+저처럼 안은영에 공감하고 안은영을 사랑하는 사람이 많은 세상이라면 힘들더라도 어떻게든 살아갈 수 있겠다는 생각이 들었어요.
+그런 생각과 함께 책 말미에 붙어있는 추천사를 보는데 너무 많은 사람들이 실제로 저와 같은 생각을 하며 이 소설을 읽은 거예요. 그때 재차 삶의 용기를 얻었어요.
 
-20대 초반, 모든 게 막막하던 시기에 『보건교사 안은영』을 읽고 큰 힘을 얻었어요.  
-‘선한 마음으로 누군가를 돕고 싶지만, 자신의 하루하루도 버거운 사람’이라는  
-안은영의 모습이 너무 공감됐어요.  
+지금 다시 생각해보면 그게 '사랑 받는 느낌'인 것 같아요.
+하나의 이야기가 나에게 옴과 동시에 사람들의 마음도 같이 오는 느낌이었달까요.
+사실 다들 비슷한 것을 원하고 찾고 있구나 하는 생각이 드니 외로움이 사라지고 어떻게 살아야 할 지 알겠더라고요.
 
-그리고 많은 사람들이 이 소설을 사랑한다는 사실이  
-‘외롭지 않다’는 감각을 줬어요.  
-그게 사랑받는 느낌이었어요.
     </div>
 
-    <div class="q">가장 좋아하는 ‘쓰는 사람’은?</div>
+    <div class="q">맞아요. 우리는 같은 것을 읽고 느끼면서 위로받곤 하죠. 그렇다면 지호 씨가 가장 좋아하는 '쓰는 사람'은 누구예요? 왜 좋아하나요?</div>
     <div class="a">
-최근에는 『욕구들』의 저자 캐럴라인 냅이 좋아요.  
-자신의 부정적인 부분을 냉철하게 인식하고 쓴다는 것 자체가 큰 용기니까요.  
-여성들의 욕구를 어떻게 다루는지 깊이 있게 써 내려간 점이 좋았어요.
+이건 매일 바뀌는 것 같은데... 최근에는 '욕구들'이라는 책의 저자 캐롤라인이 좋아요.
+'명랑한 은둔자'라는 산문집을 선물받아서 읽었는데, 너무 좋더라고요. 이 작가의 글 쓰는 방식이 너무 좋아요.
+자신의 부정적인 부분에 대해 냉철하게 인식하고 쓴다는 게, 되게 큰 용기가 필요한 일이잖아요.
+자기 자신이 왜 그런 욕구를 느꼈는지, 다른 여성들은 어떻게 다루고 있는지에 대해 잘 써 내려갔어요.
     </div>
 
-    <div class="q">앞으로 읽고 싶은 건?</div>
+    <div class="q">앞으로 읽고 싶은 건 뭐예요?</div>
     <div class="a">
-벽돌만큼 두꺼운 책이요. 특히 SF 장르의 『클라라와 태양』.  
-요즘은 과학 입문서도 읽고 싶어요.
+벽돌만큼 두꺼운 책들이요. 그 중에서도 SF장르의 '클라라와 태양'을 읽고 싶어요.
+요즘은 기회가 된다면 과학 입문서 중 좋은 걸 찾아서 읽어보고 싶기도 해요. 
     </div>
 
-    <div class="q">추천하고 싶은 읽을거리는?</div>
+    <div class="q">추천하고 싶은 읽을 거리는 뭐예요?</div>
     <div class="a">
-여름이니까 이디스 워튼의 『여름』을 추천해요.  
-눅눅하고 꿉꿉한 한여름 같은 이야기예요.  
+한국은 지금 여름이니까, '이디스 워튼'의 소설을 읽어보는 게 어떨까요?
+'여름'이라는 제목의 소설이 있는데, 모두가 생각하는 한여름에 일어날법한 눅눅하고 꿉꿉한 얘기를 다뤘어요.  
 
-그리고 『이선 프롬』도 좋습니다.  
-겨울 배경의 짧지만 서늘한 중편이에요.
+이걸 읽었다면 '이선 프롬'을 읽어보세요. 배경이 겨울인, 등골이 서늘해지는 중편 소설이에요.
     </div>
 
-    <div class="q">추천하고 싶은 ‘쓸 곳’과 글쓰기 마음가짐은?</div>
+    <div class="q">지호 씨가 추천하고 싶은 쓸 곳은 어디예요? 또 무언가를 쓸 때 가져야 할 마음가짐은 뭐라고 생각해요?</div>
     <div class="a">
-‘브런치’를 많이 이용했으면 좋겠어요. 실제로 연재 제의가 오기도 하고요.  
-
-글쓰기 마음가짐…  
-평가하는 글에는 논리성과 근거가 필수라고 생각해요.  
-평론가가 아니더라도 작품에 진심인 사람이라면  
-평가에도 진중함이 필요하다고 생각해요.
+저는 사람들이 '브런치'를 많이 이용했으면 좋겠어요. 실제로 브런치에서 글을 쓰다 보면 연재 제의가 들어오기도 하거든요.
+      
+마음가짐… 대학 수업을 들으면서 '평가하는' 글을 쓸 때의 마음가짐은 조금 알게 됐어요.
+요즘은 '내 의견이고 내 주장이니, 어떤 평가를 하든 내 마음이다' 이런식의 태도가 너무 당연시되는 것 같더라고요.
+물론 어떤 의견도 제시될 수야 있지만 적어도 평가하는 글을 쓰고자 한다면 글이 내재적으로 완전해야 한다고 생각해요.
+뒷받침되는 근거가 확실해야 하고, 논리성을 가져야 한다는 거죠. 또, 저는 평가하는 글에 있어서 '정답'은 없을지언정 '정답에 가까운 답'은 있다고 생각합니다.
+무언가를 만드는 사람이 그 작품에 진심이라면 그걸 평가하는 사람들도 조금 더 진중해질 필요가 있어 보여요. 평론가가 아닌 저 같은 일반 대중도요.
     </div>
 
-    <div class="q">마지막으로, ‘읽고 씀’이 주는 힘은?</div>
+    <div class="q">마지막으로,
+     '읽고 씀'이 지호 씨에게 주는 힘에 대해 말해봅시다.</div>
     <div class="a">
-읽고 쓰면 현실로 다시 내려오는 느낌이 들어요.  
-발바닥이 땅에 착 붙는 느낌.  
+'읽고 씀'이 주는 힘은 정말 커요. 현실에서 붕 뜬 기분이 들 때마다 읽고, 쓰면 현실로 다시 내려오는 느낌이 들어요.
+발바닥이 땅에 제대로 붙어있는 느낌이요. 20대 중후반에는 인생에서 처음 경험하는 시련들이 많잖아요.
+그때 필요한 게 사실은 삶을 어떻게 살아가야 할지에 대한 ‘아이디어’거든요. 그걸 어디서 얻냐, 물어본다면 사실 책이 제일 좋은 것 같아요.
+저도 그럴 테니, 여러분들도 많이 읽고 썼으면 좋겠습니다. 우리 다들 제정신병자(?)로 삽시다. 
+♥
 
-20대 중후반은 처음 겪는 시련도 많잖아요.  
-그럴 때 필요한 건 ‘살아갈 아이디어’인데,  
-그걸 얻기에는 책이 가장 좋은 것 같아요.  
-
-우리 모두 많이 읽고 쓰면서 제정신병자(?)로 삽시다. ♥
     </div>
 
   </div>
