--- a/love1.html
+++ b/love1.html
@@ -91,24 +91,28 @@
 
     <div class="q">탱수에게 바라는 점이 있나요? 반대로 주희 씨가 탱수였다면 본인에게 어떤 점을 바랐을 것 같아요?</div>
     <div class="a">무조건 건강이에요. 탱수는 신부전이 있어서 계속 관리를 하면서 지내고 있거든요. 건강한 게 1순위고, 또 15년 넘게 살았으면 좋겠네요.
-    탱수는.. 제가 야구를 보지 않고 집에 있기를 바라지 않을까요? 제가 항상 집에 있기를 바랄 것 같아요.</div>
+    탱수는.. 제가 야구를 보지 않고 집에 있기를 바라지 않을까요? (인터뷰 당일 에디터와 야구를 봤다.) 제가 항상 집에 있기를 바랄 것 같아요.</div>
 
     <div class="q">인간과 인간 사이의 사랑과, 인간과 반려견 사이의 사랑에는 차이가 있을 것 같아요. 이 차이에 대해 말해줄 수 있나요?</div>
-    <div class="a">반려견을 키우는 사람은 다 알겠지만, 탱수의 세상에는 제가 전부예요. 인간과 인간 사이의 사랑과 다르게, 인간과 반려견의 사랑은 '무조건적인 사랑'이라는 점에서 차이가 있는 것 같아요. 이 무조건적인 사랑을 다른 사람들도 경험해봤으면 좋겠어요.</div>
+    <div class="a">반려견을 키우는 사람은 다 알겠지만, 탱수의 세상에는 제가 전부예요. 인간과 인간 사이의 사랑과는 달리, 인간과 반려견 사이의 사랑은 '무조건적인 사랑'이라는 점에서 차이가 있는 것 같아요. 이 무조건적인 사랑을 다른 사람들도 경험해봤으면 좋겠어요.</div>
 
     <div class="q">탱수와 함께할 때 '사랑'을 가장 크게 느낀 경험이 있나요?</div>
-    <div class="a">산책할 때 제가 집에 들어오는 타이밍과 겹치면 탱수가 저를 향해 달려오는데, 그때 사랑이 가장 잘 느껴져요.</div>
+    <div class="a">한 순간을 특정해서 말할 순 없지만, 탱수가 산책할 때 제가 집에 들어오는 타이밍이랑 겹칠 때가 있어요.
+    산책하고 있는 탱수를 부르면 탱수가 저를 향해 달려오는데, 그때 사랑이 잘 느껴져요. 아마 그 순간이 아닐까 싶어요.</div>
 
     <div class="q">앞으로 탱수와 함께 하고 싶은 일이 있다면?</div>
-    <div class="a">제주도에서 오름을 오르고 싶어요. (진드기만 문제 없으면!)</div>
+    <div class="a">제주도에서 오름을 오르고 싶어요. 제주도 진드기가 문제 되지만 않는다면요.</div>
 
-    <div class="q">반려견과 함께 가기 좋은 장소를 추천해 주세요.</div>
-    <div class="a">첫 번째는 우두동 강변! 여름에도 시원하고 풍경이 예뻐요.  
-두 번째는 하중도 생태공원. 돗자리 펴고 놀기 좋아요.  
-세 번째는 애니메이션 박물관 뒷편! 잔디가 있어 공놀이하기 좋답니다.</div>
+    <div class="q">제주도라니, 너무 좋겠네요. 반려견과 함께 가기 좋은 장소가 있다면 추천해 주세요.</div>
+    <div class="a">첫 번째는 우두동 강변이에요. 풍경이 예쁘고, 강변이어서 여름에도 시원하거든요. 
+    두 번째는 하중도 생태공원이에요. 캠핑의자나 돗자리를 깔고 강아지와 놀면 좋아요.  
+    마지막으로는 애니메이션 박물관 뒷편이에요. 잔디가 깔려있는, 강아지와 공놀이 하기 좋은 공간이에요.</div>
 
-    <div class="q">마지막으로, 탱수가 내게 주는 힘?</div>
-    <div class="a">탱수의 존재 자체가 힘이에요. 오래오래 살았으면 좋겠고, 빨리 취업해서 온전히 책임지고 싶어요. 탱수는 제가 자리를 빨리 잡게 만드는 원동력이에요. ♥</div>
+    <div class="q">마지막으로
+    탱수가 내게 주는 힘에 대해 말해봅시다.</div>
+    <div class="a">탱수의 존재 자체가 살아가는 데 힘이 돼요. 그래서 탱수가 오래오래 살았으면 좋겠어요. 벌써 마지막을 생각하면 슬프거든요.
+    인간보다 빠른 강아지의 순간이 천천히 흘렀으면 해요. 또 빨리 취업해서 탱수를 온전히 책임지고 싶어요.
+    탱수가 제겐 빨리 자리 잡게 하는 동기가 되는 것 같아요. ♥</div>
   </div>
 
   <!-- TOP 버튼 -->
