--- a/love2.html
+++ b/love2.html
@@ -68,10 +68,10 @@
     <img src="love/love2_main.png" alt="이승미 이미지" class="interview-img">
 
     <div class="q">♥︎가장 좋아하는 장소♦︎</div>
-    <div class="a">장소? 애착 있는 장소? 장소는 그냥 장소인 거 아닌가? (진짜 의문이었던 듯)</div>
+    <div class="a">장소? 애착 있는 장소? 장소는 그냥 장소인 거 아닌가?(진짜 의문인 듯 보였다)</div>
 
     <div class="q">♥︎가장 좋아하는 간식♦︎</div>
-    <div class="a">아아! 구체적으로는 네스프레소 여름 한정 코코넛 커피 향 캡슐을 좋아해요.</div>
+    <div class="a">아아! 구체적으로는 네스프레소의 캡슐 중에 여름 한정 코코넛 커피 향 캡슐이 좋아요.</div>
 
     <div class="q">♥︎하고 싶은 말♦︎</div>
     <div class="a">인터뷰 너무 신기하다!</div>
@@ -80,46 +80,47 @@
     <div class="a">뮤지컬.</div>
 
     <div class="q">가장 최근에 본 뮤지컬은 뭐예요?</div>
-    <div class="a">'리틀잭'이요. 싱어송라이터의 컴백 무대를 소재로 한 뮤지컬로, 노래에 얽힌 사연을 말하고 부르는 밴드 형식의 공연이에요.</div>
+    <div class="a">'리틀잭'이요. 리틀잭이라는 싱어송라이터의 컴백 무대를 소재로 한 뮤지컬이에요. 노래에얽힌 사연을 말하고 부르는, 밴드 형식의 공연입니다.</div>
 
-    <div class="q">가장 좋아하는 뮤지컬이나 장르는?</div>
-    <div class="a">서정적인 스토리를 좋아해요. 가장 좋아하는 작품도 서정적인 스토리의 '하데스타운'이에요.</div>
+    <div class="q">가장 좋아하는 뮤지컬이나 장르가 있다면요?</div>
+    <div class="a">장르는 서정적인 스토리가 담긴 장르를 좋아해요. 가장 좋아하는 작품도 서정적인 스토리를 가진 '하데스타운'이에요.</div>
 
-    <div class="q">왜 가장 좋아할까요? 기억나는 장면이나 대사가 있다면?</div>
-    <div class="a">'하데스타운'은 중독성이 있어요. 극이 끝나도 끝나지 않고 도돌이표처럼 반복되는 느낌이거든요. 무엇보다 넘버가 너무 좋아요. 저는 넘버와 스토리 모두 좋은 극에 매료돼요. 그게 바로 '하데스타운'이죠.</div>
+    <div class="q">왜 가장 좋아할까요? 기억나는 장면이나 대사가 있다면 말해주세요.</div>
+    <div class="a">'하데스타운'은 중독성이 있어요. 극이 끝나도 끝나지 않고 도돌이표처럼 돌아가는 느낌이거든요. 무엇보다 넘버가 너무 좋아요. 저는 넘버와 스토리 모두가 좋은 극에 매료되는 것 같아요. 그게 '하데스타운' 이고요.</div>
 
-    <div class="q">‘하데스타운’ 속 주인공과 닮은 점은?</div>
-    <div class="a">오르페우스는 자신의 일에 집중하느라 에우리디케가 지하세계로 끌려가는 것도 몰라요. 저도 집중하면 주변을 못 볼 때가 있어요. 그래서 공감됐어요.</div>
+    <div class="q">'하데스타운' 속 주인공과 승미 씨가 닮은 점은 무엇인가요?</div>
+    <div class="a">오르페우스는 자신의 일에 집중하느라, 에우리디케가 지하세계에 끌려가는 것도 몰라요. 저도 집중하면 다른 사람의 상황을 잘 못 볼 때가 있거든요. 누군가는 답답하다고 느꼈을지도 모르지만, 저는 그 심정이 이해 갔어요.</div>
 
-    <div class="q">만약 승미 씨가 오르페우스라면 어떤 선택을 했을까요?</div>
-    <div class="a">지상으로 올라올 때 “절대 뒤를 돌아보지 말라”고 하는데, 오르페우스는 결국 돌아봐요.  
-저는 겁이 많아서… 돌아보지 않았을 것 같아요. 그래서 다른 결말을 만들었을 것 같아요.</div>
+    <div class="q">만약 승미 씨가 극 속 '오르페우스' 같은 상황이면 어떤 선택을 했을 것 같나요?</div>
+    <div class="a">오르페우스와 에우리디케가 함께 지상세계로 올라갈 때 '절대' 뒤를 돌아보지 말라고 해요. 그런데 오르페우스는 돌아봐요. 그렇게 에우리디케가 다시 지하 세계로 끌려들어 가면서 극이 끝나거든요. 
+    저는 그 순간 돌아보지는 않았을 것 같아요. 겁이 많거든요. 겁이 많은 성격 때문에 다른 결말을 만들었을 것 같아요. </div>
 
     <div class="q">평소 성격도 그런 편인가요?</div>
-    <div class="a">겁도 많고, 하지 말라는 건 절대 안 해요. 쓰레기도 길에 안 버리고, 무단횡단도 안 해요. 그래서 오르페우스가 뒤돌아볼 때 답답하기도, 용기 있다고도 느꼈어요.</div>
+    <div class="a">저는 겁도 많고, 하지 말라는 건 잘 안 하는 편이에요. 쓰레기를 버리지도, 무단횡단을 하지도 않는 성격이거든요. (진짜 안 한다. 에디터 보증!) 그래서 오르페우스가 뒤를 돌아볼 때 답답하기도 하고 한편으로는 용기 있다고도 생각했어요.</div>
 
-    <div class="q">뮤지컬 속 ‘사랑’에 대해 묻고 싶어요. 어떤 영향을 받았나요?</div>
-    <div class="a">뮤지컬 '몬테크리스토'에서 우정 장면에 크게 감동했어요. 주인공이 감옥에서 신부님과 동고동락하는 장면이 있는데, 신부님이 탈옥하지 못하고 죽어요. 그 장면이 너무 슬펐어요.  
-저는 친구 간의 사랑, 즉 '우정'이라는 가치에 유독 약한 것 같아요.</div>
+    <div class="q">뮤지컬 장면 속 ‘사랑’에 대해 묻고 싶어요. 사랑의 장면이 승미 씨에게 어떤 영향을 줬는지도요.</div>
+    <div class="a">뮤지컬 '몬테크리스토'를 보면서 느낀 게 있어요. 저는 '우정'이라는 가치에 약하다는걸요.주인공이 감옥에 갇히게 되는데, 거기서 한 신부님을 만나게 돼요. 같이 탈옥을 하는 과정에서 동고동락하다가 결국 신부님만 탈옥을 하지 못하고 죽는데, 그 장면이 너무 슬펐어요. 
+    저는 친구 간의 사랑, 즉 '우정'이라는 가치에 감동받고, 유독 감정이 말랑말랑해지는 것 같아요. </div>
 
-    <div class="q">극적인 표현과 정제된 표현 중 어떤 쪽에 감정이 동하나요?</div>
-    <div class="a">저는 극적인 표현에 감정이 더 움직여요. 평소에는 감정이 크게 변하지 않는데, 뮤지컬을 보는 순간만큼은 제 이야기가 아닌데도 몰입이 되고 현실에서 벗어나는 기분이 들어요.</div>
+    <div class="q">뮤지컬은 연극적인 요소를 중점으로 두기에 감정 표현이 더 극적으로 이뤄져요.
+    정제된 사랑 표현에 감정이 동하는 사람이 있는 반면, 이런 극적인 표현에 감정이 동하는 사람도 있죠. 승미 씨는 어떤 쪽이에요? </div>
+    <div class="a">저는 극적인 표현에 감정이 동하는 사람이에요. 그렇지만 평소에는 감정이 동할 일이 잘 없거든요. 그래서 감정이 없는 로봇처럼 살다가 뮤지컬을 보는 그 순간만큼은 제 이야기가 아닌데도 불구하고 몰입이 되고, 현실에서 벗어난 것 같은 기분이 드는 거 같아요.</div>
 
-    <div class="q">좋아하는 뮤지컬 배우는?</div>
-    <div class="a">박강현!  
-우연히 본 뮤지컬에서 좋아하게 됐어요. 부드럽고 강한 목소리가 매력적이고, 인터뷰나 콘텐츠에서 생각을 말하는 모습도 정말 멋있어요.  
-극 속 모습과 일상 속 모습의 차이가 큰 것도 좋아요.</div>
+    <div class="q">분위기를 환기해 보죠. 좋아하는 뮤지컬 배우가 있다고 들었어요. 누구고, 왜 좋아하나요?</div>
+    <div class="a">박강현이에요.
+    우연히 보러 간 뮤지컬에서 좋아하게 됐어요. 외적인 건 물론이고, 부드럽고 강한 목소리를 좋아해요. 뮤지컬 외적인 콘텐츠를 볼 때도 자신의 생각을 말로 표현할 때 굉장히 멋있더라고요. 
+    극에서의 박강현과 일상생활에서의 박강현의 차이가 큰 게 참 좋아요. </div>
 
-    <div class="q">앞으로 보고 싶은 작품은?</div>
-    <div class="a">‘멤피스’. 모레 보러 가요!</div>
+    <div class="q">앞으로 보고 싶은 작품은 뭐예요?</div>
+    <div class="a">멤피스요. 모레 보러 가요.</div>
 
-    <div class="q">추천하고 싶은 작품은?</div>
-    <div class="a">토니 어워즈 6관왕을 받은 ‘어쩌면 해피엔딩’이요. 넘버와 스토리가 모두 탄탄하고 서정적이에요.</div>
+    <div class="q">추천하고 싶은 극이 있나요?</div>
+    <div class="a">얼마 전에 토니 어워즈에서 6관왕을 한 '어쩌면 해피엔딩'이라는 작품이에요. 서정적인데 넘버도 좋고 스토리도 탄탄해요. 꼭 봤으면 좋겠어요.</div>
 
-    <div class="q">마지막으로, 뮤지컬이 내게 주는 힘은?</div>
-    <div class="a">뮤지컬이 토요일에 있으면 그날을 기다리며 너무 설레요. 여행 전 설렘 같은 느낌이죠.  
-그리고 일상을 버티는 힘이 돼요. 화날 때 감정을 누그러뜨려 주기도 하고요.  
-저는 화가 많은 사람이라서… (웃음)♥</div>
+    <div class="q">마지막으로
+    뮤지컬이 내게 주는 힘에 대해 말해봅시다.</div>
+    <div class="a">뮤지컬이 토요일에 있으면, 기다리는 동안 너무 설레요. 여행 가기 전 설레는 느낌이랄까요?
+    또, 일상을 버티는 힘이 돼 줘요. 일상생활 속에서 화날 때 화를 누그러트리는 힘이 돼 주고요. 저는 화가 많거든요.(웃음)♥</div>
 
   </div>
 
