--- a/love4.html
+++ b/love4.html
@@ -83,96 +83,75 @@
 
     <div class="q">홍시를 처음 만난 곳은 어디였나요?</div>
     <div class="a">
-홍시는 강남구청역에서 처음 만났어요.  
-듣고 있는 강의 과제를 찾으려고 에타를 보다가  
-하수구에서 구조해 임시보호 중이라는 글을 보게 됐고,  
-가족 설득 과정을 거쳐 입양하게 됐어요.
+홍시는 강남구청역에서 처음 만났어요. 
+제가 듣고 있는 강의의 과제를 찾아보려고 에타에 들어갔다가, 홍시를 하수구에서 구조해 임시보호하고 있다는 글을 봤어요. 
+글을 보자마자 가족들에게 공유하고, 설득하는 과정을 거쳐 최종적으로 입양하게 됐습니다. 
     </div>
 
     <div class="q">첫인상은 어땠어요?</div>
     <div class="a">
-케이지가 너무 가벼웠어요.  
-“이 작은 생명체를 내가 책임질 수 있을까?” 하는 걱정이 들었죠.  
-반려동물을 키우고 싶다는 마음은 오래전부터 있었지만,  
-막상 입양하니 마냥 좋지만은 않았고 두려움도 컸어요.  
-끝이 정해져 있다는 것도 무서웠고요.
+케이지가 너무 가벼웠어요. '이 작고 솜털 같은 생명체를 내가 책임질 수 있을까?' 하는 걱정이 들더라고요. 
+동물을 키우고 싶다는 생각은 어릴 때부터 막연하게 있었는데, 막상 키우게 되니 마냥 좋지만은 않고 두려웠어요. 
+후회되는 순간이 생길까 봐요. 끝이 정해져 있다는 것도 무서웠고요. 
     </div>
 
-    <div class="q">홍시와 함께한 기억나는 추억이 있다면?</div>
+    <div class="q">홍시와 함께한 기억나는 추억이 있다면 말해주세요.</div>
     <div class="a">
-홍시가 제 방에서 잘 때(잘 안 자지만요), 보통 다리 사이에서 자요.  
-어느 날은 제 팔을 베고 누운 거예요.  
-팔이 저리는데도, 제발 떠나지 않기를 빌었죠.  
-근데 인증 사진 찍으려고 드는 순간… 도망갔어요.(웃음)
+홍시가 제 방에서 자면(잘 안 자긴 하지만요.) 보통은 제 다리 사이에서 자요. 
+그런데 어느 날은 제 팔을 베고 누운 거예요. 
+그날은 팔이 저렸는데도 참으면서 제발 곁을 떠나지 않기를 빌었어요. 
+그런데 제 욕심이 컸던건지, 인증 사진을 찍으려고 드는 순간 도망가더라고요.(웃음) 
     </div>
 
-    <div class="q">홍시와 닮은 점은?</div>
+    <div class="q">홍시와 희연 씨의 닮은 점은 뭐예요?</div>
     <div class="a">
-둘 다 누워있는 걸 좋아해요.  
-홍시는 가족들이 집에 오면 말을 엄청 많이 하는데,  
-저도 친한 사람을 만나면 말이 많아져요.  
-
-그리고 둘 다 겁이 많아요.  
-홍시는 큰 물건이나 성인 남자를 무서워하고,  
-저도 공포영화나 놀이기구를 무서워하거든요.
+우선 둘 다 누워있는 걸 참 좋아해요. 그리고 홍시가 저나 가족들과 함께 있으면 말이 엄청 많아져요. 
+가족들이 각자 일정을 마치고 집에 오는 순간, 홍시가 막 말을 하는데 친한 사람을 만나면 말을 많이 하는 저랑 닮은 것 같아요. 
+그리고 겁이 많은 거? 저도 공포영화나 놀이 기구를 무서워하는데, 홍시도 큰 물건이나 성인 남성을 무서워하거든요. 
     </div>
 
-    <div class="q">홍시에게 바라는 점은? 반대로 희연 씨가 홍시였다면요?</div>
+    <div class="q">홍시에게 바라는 점이 있나요? 반대로 희연 씨가 홍시였다면 본인에게 어떤 점을 바랐을 것 같아요?</div>
     <div class="a">
-홍시에게 바라는 건 단 하나, 오래오래 행복하게 살아주는 것.  
-그리고… 제가 편하게 안을 수 있으면 좋겠어요.  
-안아들면 물거든요. 아주 이기적이에요.(웃음)
-
-반대로 제가 홍시였다면?  
-간식을 더 많이 주길 바라지 않을까요?  
-아니면 좀 일찍 일찍 집에 들어오기?
+홍시에게 바라는 건 오래 오래 행복하게 살아주는 것 하나예요. 그거 말고는 바라는 게없어요. 
+아! 하나 있다면 제가 좀 편하게 안을 수 있으면 좋겠어요. 홍시가 순해 보이지만 자기가 원하지 않을 때 안아들면 물거든요.엄청나게 이기적이에요. 
+홍시는... 제가 간식을 많이 주면 좋겠다고 생각하지 않을까요? 아니면 좀 일찍 일찍 들어오기? 
     </div>
 
-    <div class="q">홍시를 키우면서 힘들었던 점은?</div>
+    <div class="q">홍시를 키우면서 힘들었던 점은 있었나요?</div>
     <div class="a">
-홍시가 어렸을 때는 이불 속 발이 조금만 움직여도  
-사냥감으로 인식해서 다리를 물었어요.  
-온 가족이 상처가 날 정도였죠.  
-교육이 처음엔 잘 안 됐는데… 역시 시간이 해결해줬어요.  
-지금은 많이 안 물어요.
+홍시가 어렸을 때는 이불 속에 있는 가족들의 발이 살짝만 움직여도 사냥감으로 인식하고 다리를 물었어요. 
+온 가족들이 다리를 물리고 할퀴어서 상처가 생길 정도였죠. 
+교육을 시키려고 했는데, 처음에는 잘 안되더니 역시 시간이 해결해 주더라고요. 지금은 예전만큼 잘 안 물어요. 
     </div>
 
-    <div class="q">두려움이 있다면?</div>
+    <div class="q">홍시를 키우면서 갖게 된 두려움이 있을까요?</div>
     <div class="a">
-홍시와 헤어지는 것에 대한 두려움.  
-좋아하면 좋아할수록 더 무서워져요.  
-평소에는 행복하지만, 가끔 관련 슬픈 쇼츠를 보면  
-눈물이 날 때가 있어요.
+홍시와 헤어지는 것에 대한 두려움이 있어요. 홍시를 좋아하면 좋아할수록 더 무서워져요. 
+평소에는 함께 있는 게 재미있고 행복한데, 문득 고양이와 관련된 슬픈 쇼츠를 보면 눈물바다가 되곤 합니다.
     </div>
 
-    <div class="q">반려묘와 인간 사랑의 차이는?</div>
+    <div class="q">인간과 인간 사이의 사랑과, 인간과 반려묘 사이의 사랑에는 차이가 있을 것 같아요. 차이에 대해 말해줄 수 있나요?</div>
     <div class="a">
-인간 사이의 사랑은 준 만큼 받길 기대하죠.  
-하지만 동물은 달라요. 존재 자체만으로 좋아요.  
-홍시만 봐도… 그냥 귀엽잖아요.
+인간과 인간 사이의 사랑은 준 만큼 받는 걸 기대할 수밖에 없는 것 같아요. 부모와 자식 간에도 마찬가지고요. 
+그런데 동물의 경우는 달라요. 존재 자체만으로, 만질 수 있고 볼 수 있다는 거 자체가 좋아요. 홍시만 봐도... 그냥 귀엽잖아요.  
     </div>
 
-    <div class="q">홍시와 함께할 때 가장 크게 사랑을 느낀 순간은?</div>
+    <div class="q">홍시와 함께할 때 '사랑'을 가장 크게 느낀 경험이 있나요? 있다면 말해주세요.</div>
     <div class="a">
-제가 집에 들어가면 자다가도 뛰어와요.  
-그때마다 저를 기다렸다는 느낌이 들어요.  
-
-소파에 앉으면 무릎 위에 올라올 때,  
-웃긴 자세로 자거나 이상한 행동을 할 때  
-힐링되고 사랑을 느껴요.
+집에 들어가면 홍시가 자고 있다가도 막 뛰어와요. 그때마다 저를 기다려주는 것 같은 느낌이 들어서 사랑받는 것 같아요. 
+또, 제가 소파에 있으면 무릎에 올라와서 앉을 때, 홍시가 웃기게 자거나 이상한 행동을 할 때 사랑을 느끼는 것 같고 힐링 돼요. 
     </div>
 
-    <div class="q">앞으로 홍시와 함께 하고 싶은 일?</div>
+    <div class="q">앞으로 홍시와 함께 하고 싶은 일이 있다면?</div>
     <div class="a">
-소파에 앉으면 무조건 달려와줬으면 좋겠어요.  
-평생 골골대면서 만져졌으면 좋겠어요.
+소소하게... 제가 소파에 앉아있으면 무조건 달려와줬으면 좋겠어요. 평생 골골대면서 저에게 만져졌으면 좋겠어요.
     </div>
 
-    <div class="q">마지막으로, 홍시가 주는 힘은?</div>
+    <div class="q">마지막으로
+홍시가 희연 씨에게 주는 힘에 대해 말해봅시다.</div>
     <div class="a">
-홍시는 귀여움 하나로 힘든 걸 잊게 해줘요.  
-짜증나는 일이 있어도 가까이 오면  
-그 생각이 싹 사라져요. ♥
+홍시는 귀여움으로 힘든 걸 잊게 해주는 힘이 있어요. 
+좀 짜증나는 일이 있어도, 홍시가 가까이 오면 저도 모르게 짜증 나는 생각들을 잊게 돼요. ♥
     </div>
 
   </div>
