--- a/work5.html
+++ b/work5.html
@@ -86,29 +86,29 @@
     <div class="q">하고 싶다고 생각한 이유가 있나요?</div>
     <div class="a">돈?(웃음) 해외 바이어들과 커뮤니케이션할 수 있는 해외 의류 시장 관련 일을 해보고 싶었어요. 감사하게도 대학교 때 인턴을 할 수 있는 기회가 생겼고 일을 시작하면서 꿈을 키워갔어요.</div>
 
-    <div class="q">고등학교 때부터 패션 쪽에 관심이 있다고 들었어요.</div>
-    <div class="a">왜 그랬는지 모르겠지만 의류 종사자가 되고 싶은 건 어렸을 때부터였어요. 한 번도 꿈이 바뀐 적도 없고요. 예술에 관심이 많았고, 의류가 생활 속에서 가장 접하기 쉬운 예술이라 자연스럽게 진로로 이어졌어요.</div>
+    <div class="q">멋있네요. 고등학교 때부터 패션 쪽에 관심이 있다고 들었어요.</div>
+    <div class="a">왜 그랬는지 모르겠지만 의류 종사자가 되고 싶은 건 어렸을 때부터였어요. 한 번도 꿈이 바뀐 적도 없고요. 어렸을 때부터 가족들과 전시회나 박물관을 다니면서 예술에 관심을 가지게 됐는데, 의류가 생활 속에서 가장 접하기 쉬운 예술이라 그런지 눈길이 가더라고요. 그래서 진로를 정하는 것도 어렵지 않았어요.</div>
 
     <div class="q">어느덧 3년 차에 접어들었다고요. 유선 씨가 일을 하며 체감한 큰 '사랑'은 무엇이었나요?</div>
-    <div class="a">저는 사실 일에서 사랑을 느껴본 적은 없어요. 그보다는 '책임', '생존' 같은 단어에 더 가까운 것 같아요. 그래도 버티고 흔들리면서도 계속 나아가는 제 스스로를 보면, 어쩌면 저만의 방식으로 사랑에 닿아가는 길일지도 모르겠다고 생각해요.</div>
+    <div class="a">저는 사실 일에서 사랑을 느껴본 적은 없어요. 그보다는 '책임', '생존'같은 단어에 더 가까웠달까?(웃음) 물론 일에 몰입해서 무언가를 해냈을 때의 뿌듯함은 있었지만, 그걸 사랑이라 부르기엔 조금 먼 감정인 것 같아요. 제게 일은 늘 일정한 거리에서 바라보며 다뤄야 하는 것이었고, 그 거리를 지키는 게 저를 지켜주는 방식이었던 것 같아요. 그래도 그 안에서 버티고, 흔들리면서도 계속 나아가고 있는 저를 보면 어쩌면 그게 저만의 방식으로 사랑에 닿아가는 길일지도 모르겠다는 생각이 들어요.</div>
 
     <div class="q">또 다른 사랑을 말해볼까요?<br>직업을 선택할 때 믿어줬던, 사랑하는 사람에 대해 말해줄 수 있나요?</div>
-    <div class="a">엄마예요. 시작할 때도 '네가 하고 싶은 거 해봐'라고 응원해줬고, 제가 하는 일을 진심으로 공감해주는 건 엄마뿐이었어요.</div>
+    <div class="a">엄마예요. 시작할 때도 '네가 하고 싶은 거 해봐'라며 응원해 줬고, 이 일이 뭔지도 같이 찾아봐줬어요. 제가 하는 일에 대해 깊게 공감해 주고 대화해 주는 건 엄마밖에 없었어요.</div>
 
     <div class="q">앞으로 목표가 있나요? 소소한 목표여도 돼요.</div>
-    <div class="a">모든 메커니즘에서 전문가가 되고 싶어요. 원단마다 배우는 것이 다르고, 현재는 계속 발전하는 느낌이 듭니다.</div>
+    <div class="a">모든 메커니즘에서 전문가가 되고 싶어요. 재질마다 옷을 대하는 방식이 달라서, 매 오더마다 다른 배움의 과정을 겪고 있어요. 전 회사에서는 우븐, 니트 등 여러가지 원단을 만져 봤고, 원단을 가지고 랩실에서 실험도 했거든요. 그 과정을 거쳐 지금은 의류 회사로 이직했는데 점점 발전하는 느낌이 들어요.</div>
 
-    <div class="q">앞으로 연차가 더 쌓이면 도전해 보고 싶은 분야는요?</div>
-    <div class="a">원단 영업을 해보고 싶어요. 바이어가 원하는 원단을 소싱해서 제안하는 업무가 매력적이에요.</div>
+    <div class="q">앞으로 연차가 더 쌓이면 도전해 보고 싶은 분야가 있다면요?</div>
+    <div class="a">저는 현재 가먼트 해외영업부서인데, 가먼트를 다루면서 원단에 대해 더 공부해 보고 싶다는 생각이 들었어요. 나중에 경력이 쌓이면 원단 영업으로 직무를 옮겨보고 싶어요. 바이어가 원하는 원단으로 소싱해서 제안하는 업무가 매력적으로 느껴졌거든요.</div>
 
-    <div class="q">이 일을 하고 싶은 사람들에게 조언해 줄 만한 말이 있다면요?</div>
-    <div class="a">직접 해보는 게 가장 좋아요. 영어 공부는 필수고, 꼼꼼함과 성실함도 중요해요.</div>
+    <div class="q">멋있네요. 이 일을 하고 싶은 사람들에게 조언해 줄 만한 말이 있다면요?</div>
+    <div class="a">일을 직접 해보는 게 좋을 거 같아요. 영어 공부도 꼭 해야 하고요. 왜냐하면 해외 바이어들을 상대해야 하고, 이메일 작성부터 회의까지 영어로 이뤄지거든요. 또 성실해야 해요. 꼼꼼해야 하고. 무슨 일을 하든 열심히 해야 할 거예요.</div>
 
-    <div class="q">마지막으로 현재 직업을 하면서 내게 귀감이 되었던 사람에게 고마움 한마디 전해봅시다.</div>
-    <div class="a">계약직 시절부터 만난 모든 분들! 의류 벤더 분야에서 사람은 큰 인적 자원이에요. 모두 감사합니다.</div>
+    <div class="q">마지막으로 일하는 동안 유선 씨에게 큰 귀감이 되었던 사람에게 고마움 한마디 전해봅시다.</div>
+    <div class="a">여러 회사를 거쳐오면서 다양한 사람들을 만났어요. 그분들께 의류 관련 조언을 들으니 시야가 좀 더 커지기도 했고요. 시야가 커진 만큼 꿈에 대한 애정도 커지더라고요. 정보를 알기 쉽지 않은 '의류 벤더'라는 분야에서는 사람이 가장 큰 인적 자원이에요. 계약직일 때부터 지금까지. 만난 모든 분들! 감사합니다.</div>
 
     <div class="q">회사 근처 맛집</div>
-    <div class="a">'크리피'라는 브런치 집인데, 그릴드 바질페스토 샌드위치를 추천해요. 오늘의 수프는 꼭 시켜야 하고, 커피까지 곁들이면 평일 같지 않은 주말 바이브를 느낄 수 있어요. ♥</div>
+    <div class="a">'크리피'라는 브런치 집인데, 그릴드 바질페스토 샌드위치를 추천해요. 오늘의 수프를 꼭 먹어야 해요! 버섯의 향이 엄청 진하거든요. 커피까지 같이 시켜 먹으면 평일 같지 않은 주말 바이브를 느낄 수 있을 거예요.  ♥</div>
   </div>
 
   <!-- 맨 위로 -->
