--- a/work6.html
+++ b/work6.html
@@ -83,34 +83,36 @@
     <div class="a">유재석이 광고하는 '엘리하이' CM송을 들어본 적 있을 거예요. 그 '엘리하이'를 만든 회사에서 초등학교 3학년 아이들의 교육 콘텐츠를 만드는 일을 하고 있어요. 전반적인 강의를 기획하고 스토리보드를 작성하고 있습니다.</div>
 
     <div class="q">하고 싶다고 생각한 이유가 있나요?</div>
-    <div class="a">엄마가 선생님이어서 어릴 때부터 선생님이 되고 싶었어요. 자연스럽게 대학교에서도 특수교육과를 전공하며 교육업에 가까워졌고, 임용 준비를 하려 했지만 공부가 맞지 않아 '에듀테크'와 콘텐츠 기획에 관심이 생겨 지금의 직업을 선택하게 됐어요.</div>
+    <div class="a">엄마가 선생님이어서 어릴 때부터 선생님이 되고 싶었어요. 자연스럽게 대학교에서도 특수교육과를 전공하면서, 교육업에 한 발짝 가까워지게 됐어요. 대학교를 졸업한 뒤 임용 준비를 할까 다른 직업에 도전해 볼까 고민했는데 막상 임용 준비를 해보니 공부하는 게 싫고, 마침 '에듀 테크'와, 콘텐츠 만드는 일에 관심이 생기게 돼서 자연스럽게 이 직업을 선택한 것 같아요.</div>
 
     <div class="q">아이들에게 영향을 미치는 교육 콘텐츠인 만큼 '세심함'이 중요할 것 같아요. 유정 씨의 평소 성향과도 관련이 있을까요?</div>
-    <div class="a">저는 원래 세심한 성격은 아니었어요. 하지만 특수교육 전공 특성상 이상 행동을 보이는 장애 아동을 케어하며 자연스럽게 세심해졌어요. 그래도 지금 일은 여전히 어렵지만요.(웃음)</div>
+    <div class="a">저는 원래 세심한 성격은 아니었어요. 그런데 전공이 특수교육이다 보니 장애를 가진 아이들을 4년 동안 만나게 됐는데, 이상 행동을 보이는 장애 아동을 케어하다 보니 세심해질 수밖에 없었어요. 그럼에도 지금 하고 있는 일은 어렵지만요.(웃음)</div>
 
     <div class="q">유정 씨만의 고충이 뭔지도 궁금하네요.</div>
-    <div class="a">아이들의 흥미를 끌며 교육적인 정보를 전달하는 콘텐츠를 만드는 것이 어려워요. 난이도를 조절하는 것도 어렵고, 태블릿에서 구현할 수 있는 액션의 한계 때문에 ‘실감 나게’ 만드는 작업이 쉽지 않아요. 컷마다 캐릭터, 의상 등을 정하는 과정도 많은 고민이 필요해요.</div>
+    <div class="a">아이들의 흥미를 이끌어내면서 교육적인 정보를 전달해야 하는데 창의성이 없는 저로서는 창의적인 콘텐츠를 만드는 게 너무 어려웠어요. 콘텐츠의 난이도를 조절하는 것도요. 제가 생각했을 때 쉬운 교육 자료도 다른 사람들 눈에는 어렵게 느껴질 수도 있으니, 눈높이를 맞추는 게 쉽지 않더라고요.
+또 태블릿에 구현할 수 있는 액션에는 한계가 있어요. 그래서 '실감 나게 실행해라'라는 요구가 어렵게 느껴져요. 컷 하나하나에 어떤 인물이 사용될지, 인물이 어떤 아웃핏을 입어야 할지 정하는 일에는 많은 고민이 필요해요.
+    </div>
 
-    <div class="q">어느덧 2년 차에 접어들었어요. 이 일을 하며 체감한 가장 큰 '사랑'은 무엇이었나요?</div>
-    <div class="a">동료에 대한 사랑이에요. 제가 느리면 선임분들이 도와주고 자료나 업무를 나눠주고, 기분이 안 좋아 보이면 공차를 사주기도 해요. (주문은 제가 하지만요! 웃음)</div>
+    <div class="q">어느덧 2년 차에 접어들었어요. 유정 씨가 이 일을 하며 체감한 가장 큰 '사랑'은 무엇이었나요?</div>
+    <div class="a">동료에 대한 사랑을 말하고 싶어요. 제가 신입이다 보니 손이 느려서 힘들 때가 있는데,옆에서 선임분들이 잘 캐치해 줬어요. 자료를 주기도 하고 일을 덜어주기도 하니 고마워요. 가끔은 제 기분이 안 좋아 보이면 공차를 배달시켜주기도 합니다. 주문은 제가 해야 하지만요.(웃음)</div>
 
     <div class="q">또 다른 사랑을 말해볼까요?<br>직업을 선택할 때 믿어줬던, 사랑하는 사람에 대해 말해줄 수 있나요?</div>
-    <div class="a">없는 것 같아요. 저는 제 고민을 잘 말하지 않는 편이고, 선택한 직업이 시험 준비 이후의 방향이라 주변에 말하기도 어려웠어요. 결국 저 자신을 가장 많이 믿었어요.</div>
+    <div class="a">없는 것 같아요. 애초에 제가 제 고민을 잘 말 안 하는 사람이기도 하고, 시험을 준비하다 선택한 직업이기 때문에 주변에 말하기도 어려웠던 것 같아요. 제가 저를 가장 많이 믿었죠.</div>
 
     <div class="q">앞으로 목표가 있나요? 소소한 목표여도 돼요.</div>
     <div class="a">일을 좀 더 빨리 쳐낼 수 있었으면 좋겠어요.</div>
 
-    <div class="q">앞으로 연차가 더 쌓이면 도전해 보고 싶은 분야는요?</div>
-    <div class="a">장애인이 이용할 수 있는 교육 콘텐츠를 만들고 싶어요.</div>
+    <div class="q">앞으로 연차가 더 쌓이면 도전해 보고 싶은 분야가 있다면요?</div>
+    <div class="a">장애인이 이용할 수 있는 교육 콘텐츠를 만들어보고 싶어요.</div>
 
-    <div class="q">이 일을 하고 싶은 사람들에게 조언해 줄 만한 말이 있다면요?</div>
-    <div class="a">아이들의 수가 줄어 시장 전망이 밝진 않지만, 공부를 많이 해야 해요. 콘텐츠 트렌드가 빨리 변하기 때문에 새로운 걸 계속 공부해야 하죠. 쉽지 않지만요.</div>
+    <div class="q">멋있네요. 이 일을 하고 싶은 사람들에게 조언해 줄 만한 말이 있다면요?</div>
+    <div class="a">아이들의 수가 점점 줄어들어서 시장 전망이 좋지 않기 때문에 더 많이 공부해야 할 거예요. 콘텐츠 트렌드도 빨리 바뀌어서 새로운 걸 찾아서 공부하려는 사람이 돼야 해요. 쉽지는 않지만요.</div>
 
-    <div class="q">마지막으로, 일하며 큰 귀감이 되었던 사람에게 고마운 마음 한마디 전한다면?</div>
-    <div class="a">차장님이요. 일이 많은데도 싫은 티를 전혀 내지 않으세요. 덕분에 힘든 날도 웃어넘길 수 있었고, 많은 도움을 받아 감사해요.</div>
+    <div class="q">마지막으로 일하는 동안 유정 씨에게 큰 귀감이 되었던 사람에게 고마움 한마디 전해봅시다.</div>
+    <div class="a">차장님에게 고마움을 전하고 싶어요. 일이 많은데도 싫은 티를 하나도 안 내세요. 차장님 덕분에 힘들어도 잘 웃어넘길 수 있는 것 같아요. 일적으로도 많이 도와주고, 야근을 할 때도 잘 챙겨줘서 감사합니다.</div>
 
     <div class="q">회사 근처 맛집</div>
-    <div class="a">봉산옥! 만두전골과 오징어순대가 정말 맛있어요. ♥</div>
+    <div class="a">봉산옥, 만두전골과 오징어순대가 정말 맛있어요. ♥</div>
 
   </div>
 
