--- a/work3.html
+++ b/work3.html
@@ -106,7 +106,7 @@
 
     <div class="q">음악을 하고 싶다고 생각한 이유가 있나요?</div>
     <div class="a">
-저는 어릴 때부터 음악을 했어요. 어릴 때는 클래식을 했었는데, 어느 순간 하고 싶지 않더라고요. 클래식이 저한테 핏한 느낌이 아니었거든요. 저는 제가 하고 싶은 대로 연주하고 싶은데, 규격화된 악보 그대로 연주하는 게 정말 힘들었어요. 그래서 작곡을 시작하게 됐어요. ‘악보대로 안 할 거면 차라리 내가 만들어보자!’라는 생각이 들었고, 자연스럽게 작곡을 하게 된 것 같아요.
+저는 어릴 때부터 음악을 했어요. 어릴 때는 클래식을 했었는데, 어느 순간 하고 싶지 않더라고요. 클래식이 저한테 핏한 느낌이 아니었거든요. 저는 제가 하고 싶은 대로 연주하고 싶은데, 규격화된 악보 그대로 연주하는 게 정말 힘들었어요. 그래서 작곡을 시작하게 됐어요. '악보대로 안 할 거면 차라리 내가 만들어보자!'라는 생각이 들었고, 자연스럽게 작곡을 하게 된 것 같아요.
     </div>
 
     <div class="q">중간에 진로를 바꿨다고 들었어요. 하던 일을 그만두고 새로운 일을 도전하기까지 용기가 필요했을 것 같아요. 하고 싶은 일에 대한 열정이 곧 지현 씨의 용기가 됐을까요?</div>
@@ -156,9 +156,7 @@
 
     <div class="q">이 일을 하고 싶은 사람들에게 조언해 줄 만한 말이 있다면?</div>
     <div class="a">
-저도 아직은 조언 받을 입장이긴 한데요.(웃음) 저는 음악을 늦게 시작해서 항상 나이에 대한 스트레스가 있었어요. 그 누구도 뭐라고 하지 않는데 조급한 마음이 들더라고요. 그럴 때마다 생각해요. 중요한 건 ‘누가 먼저 시작하느냐’보다 ‘누가 끝까지 하느냐’라는 걸요. 포기하지 않으면 언젠가는 돼 있을 거라고 생각하거든요. 잘 되는 사람들은 너무 잘 보이는 직업이다 보니, 지켜보다 보면 조급해지고 마음이 힘들어질지라도 그 기간을 잘 견뎌내는 것. 그리고 ‘조금 멈출지라도 뒤로 가지는 마라!’라고 여
-
-기며 끝까지 가려는 마음이 중요할 것 같아요.
+저도 아직은 조언 받을 입장이긴 한데요.(웃음) 저는 음악을 늦게 시작해서 항상 나이에 대한 스트레스가 있었어요. 그 누구도 뭐라고 하지 않는데 조급한 마음이 들더라고요. 그럴 때마다 생각해요. 중요한 건 ‘누가 먼저 시작하느냐’보다 ‘누가 끝까지 하느냐’라는 걸요. 포기하지 않으면 언젠가는 돼 있을 거라고 생각하거든요. 잘 되는 사람들은 너무 잘 보이는 직업이다 보니, 지켜보다 보면 조급해지고, 마음이 힘들어질지라도 그 기간을 잘 견뎌내는 것. 그리고 ‘조금 멈출지라도 뒤로 가지는 마라!’라고 여기며 끝까지 가려는 마음이 중요할 것 같아요.
     </div>
 
     <div class="q">마지막으로 현재 직업을 하면서 내게 큰 귀감이 되었던 사람에게 고마움 한마디 전해봅시다.</div>
