--- a/work1.html
+++ b/work1.html
@@ -180,7 +180,7 @@
 
   <!-- 맨 위로 올라가는 버튼 -->
   <button id="topBtn" class="top-btn" onclick="scrollToTop()">
-    <img src="../top.png" alt="맨 위로" style="width:36px; display:block; margin:0 auto;">
+    <img src="top.png" alt="맨 위로" style="width:36px; display:block; margin:0 auto;">
     <div style="font-weight:bold; font-size:18px; letter-spacing:2px; margin-top:2px;">TOP</div>
   </button>
 
