--- a/work1.html
+++ b/work1.html
@@ -93,8 +93,7 @@
     <div class="a">약사</div>
 
     <div class="q">구체적으로 말해줄 수 있나요?</div>
-    <div class="a">
-처방전이 내려오면 약을 조제하고 투약하는 일을 합니다. 
+    <div class="a">처방전이 내려오면 약을 조제하고 투약하는 일을 합니다. 
 또 일반의약품을 판매하고 그에 따른 복약지도를 합니다.
     </div>
 
