--- a/work1.html
+++ b/work1.html
@@ -98,8 +98,7 @@
     </div>
 
     <div class="q">약사가 되고 싶다고 생각한 이유가 있나요?</div>
-    <div class="a">
-일반 기업 취업 준비를 하고 싶지 않았어요. 
+    <div class="a">일반 기업 취업 준비를 하고 싶지 않았어요. 
 대외활동을 하거나 자격증을 따야 하는데 저는 내성적이라 그런 걸 못하겠더라고요.(웃음) 
 그나마 생물화학을 좋아하고 잘 했는데, 그걸 살릴 수 있는 시험이 약사 시험이었어요.
     </div>
