--- a/love3.html
+++ b/love3.html
@@ -88,62 +88,53 @@
     <div class="a">청담국제고등학교 시즌 2를 보고 있어요.</div>
 
     <div class="q">가장 좋아하는 드라마 장르가 있다면요?</div>
-    <div class="a">
-최근에는 변호사, 의사 같은 사람들이 나와서 추리하고 범죄를 해결하는 드라마가 흥미롭더라고요.
+    <div class="a">최근에는 변호사, 의사 같은 사람들이 나와서 추리하고 범죄를 해결하는 드라마가 흥미롭더라고요.
 가장 재밌게 본 드라마는 '지옥에서 온 판사'예요. 
     </div>
 
     <div class="q">왜 가장 좋아할까요? 기억나는 장면이나 대사가 있다면 말해 주세요.</div>
-    <div class="a">
-남자 주인공의 어머니가 오랫동안 억울하게 감옥에 있었어요.
+    <div class="a">남자 주인공의 어머니가 오랫동안 억울하게 감옥에 있었어요.
 이 사건을 판결하는 장면에서 남자 주인공이 '세상은 저희를 잊었지만 법을 저희를 잊어버리지 않았다는 걸 이 법정에서 보여주십시오'라고 말하는데,
 최근 뉴스를 보면 처벌이 제대로 이루어지지 않는 걸 흔히 볼 수 있잖아요. 그래서 그 말이 더 와닿더라고요.
 드라마는 악한 사람이 아니라 약한 사람의 손을 들어주면서 마무리되는데, 정말 감명 깊었어요.
     </div>
 
     <div class="q">'지옥에서 온 판사' 속 주인공과 하랑 씨의 닮은 점은 무엇인가요?</div>
-    <div class="a">
-여자 주인공이 정말 까칠해요. 캐릭터 특성상 사랑이 뭔지도 잘 모르다가 남자 주인공과 함께하며 깨닫게 되거든요.
+    <div class="a">여자 주인공이 정말 까칠해요. 캐릭터 특성상 사랑이 뭔지도 잘 모르다가 남자 주인공과 함께하며 깨닫게 되거든요.
 최근 저도 늦게나마 공동체의 소중함을 느끼고 있어요.
 제가 속한 회사, 가족, 친구들 사이에서 사랑을 느끼고 있답니다. 원래는 공동체보다는 저 자신이 더 우선시됐거든요. 
     </div>
 
     <div class="q">그렇게 느끼게 된 계기가 있을까요?</div>
-    <div class="a">
-제가 개인적으로 뭘 이뤄내도, 힘든 일은 또다시 찾아오더라고요.
+    <div class="a">제가 개인적으로 뭘 이뤄내도, 힘든 일은 또다시 찾아오더라고요.
 인생은 사이클처럼 줄곧 시련이 찾아오니 눈앞의 성과에 집착하기보다는 사람들과 함께하는 시간을 더 소중히 여기자고 마음먹게 됐어요. 
     </div>
 
     <div class="q">큰 깨달음이 있었군요. 어떤 방식으로 마음을 쓰려고 하나요?</div>
-    <div class="a">
-사실 저는 깊은 속 얘기를 안 좋아했는데, 이야기를 하는 순간 누군가는 저를 판단할 수 있다고 생각했기 때문이에요.
+    <div class="a">사실 저는 깊은 속 얘기를 안 좋아했는데, 이야기를 하는 순간 누군가는 저를 판단할 수 있다고 생각했기 때문이에요.
 지금도 속 얘기는 잘 안 하지만, 예전보다는 마음을 더 열면서 공동체를 잘 유지하려고 해요.
     </div>
 
     <div class="q">드라마 속 '사랑'에 대해 묻고 싶어요. 사랑의 장면이 하랑 씨에게 어떤 영향을 줬는지도요.</div>
-    <div class="a">
-사랑의 힘은 참 커요.
+    <div class="a">사랑의 힘은 참 커요.
 사랑은 유일하게 사람을 변화시키는 가치라고 생각해요.
 사람은 진정한 사랑을 알게 해주는 사람을 만나면 변하는 거 같아요. 
     </div>
 
     <div class="q">맞아요. 사랑은 사람을 변하게 하는 힘이 있죠. 하랑 씨의 개인적인 경험도 말해줄 수 있을까요?</div>
-    <div class="a">
-공동체를 사랑할 때를 말하고 싶어요.
+    <div class="a">공동체를 사랑할 때를 말하고 싶어요.
 사랑하는 사람들과 함께하며 그들이 좋아하는 걸 같이 좋아하는 시간이 즐거워졌어요.
 인생을 바라보는 시각도 많이 바뀌게 됐고요. 
     </div>
 
     <div class="q">누군가는 드라마를 지극히 현실을 담아내는 작품이라고 말하는 반면, 누군가는 드라마는 허상일 뿐이며 일상과는 동떨어져있다고  말해요. 하랑 씨는 어떤 쪽이에요?</div>
-    <div class="a">
-동떨어져 있는 거라고 생각해요. 
+    <div class="a">동떨어져 있는 거라고 생각해요. 
 일단 주인공부터 비현실적인 얼굴을 갖고 있잖아요.(웃음) 
 또 현실에 악마는 있을 수 없고, 있다고 해도 사람의 몸을 갖고 태어날 수 없으니까요.
     </div>
 
     <div class="q">굉장히 현실적이네요. 그런 일들이 현실에서 일어나기를 바라본 적은 없어요?</div>
-    <div class="a">
-비현실적인 일들이 현실에서 일어나길 바라본 적은 없어요. 지금의 삶도 충분히 만족스럽거든요.
+    <div class="a">비현실적인 일들이 현실에서 일어나길 바라본 적은 없어요. 지금의 삶도 충분히 만족스럽거든요.
 드라마를 보는 건 단순히 비현실적인 삶을 사는 사람을 보는 재미가 있어서예요.
     </div>
 
@@ -156,8 +147,7 @@
     <div class="q">마지막으로
 드라마가 하랑 씨에게 주는 힘에 대해 말해봅시다.
 </div>
-    <div class="a">
-드라마를 보는 동안에는 현실을 잊고, 순간을 즐길 수 있게 되는 것 같아요. 아무
+    <div class="a">드라마를 보는 동안에는 현실을 잊고, 순간을 즐길 수 있게 되는 것 같아요. 아무
 생각 없이. ♥
     </div>
 
