--- a/work2.html
+++ b/work2.html
@@ -5,12 +5,6 @@
   <title>WORK 2 인터뷰 - 박주민</title>
   <link rel="stylesheet" href="style.css">
 
-<!-- 상단 제목 아래, 또는 원하는 위치에! -->
-<a href="index.html" class="home-btn" style="display:inline-block; margin-bottom:24px; font-weight:bold; color:#222; text-decoration:none;">
-  ← 홈으로 돌아가기
-</a>
-
-  <!-- Pretendard 폰트 (style.css에도 있으니 중복 X) -->
   <style>
     body {
       background: #f9f9f9;
@@ -64,6 +58,13 @@
   </style>
 </head>
 <body>
+
+    <!-- 홈으로 돌아가기 버튼 -->
+  <a href="index.html" class="home-btn"
+     style="display:inline-block; margin:24px; font-weight:bold; color:#222; text-decoration:none;">
+    ← 홈으로 돌아가기
+  </a>
+  
   <div class="interview-wrap">
     <div class="interview-title">박주민 인터뷰</div>
     <img src="work/work2_main.png" alt="박주민 이미지" class="interview-img">
