--- a/work4.html
+++ b/work4.html
@@ -4,11 +4,6 @@
   <meta charset="UTF-8">
   <title>WORK 4 인터뷰 - 이예지</title>
   <link rel="stylesheet" href="style.css">
-
-<!-- 상단 제목 아래, 또는 원하는 위치에! -->
-<a href="index.html" class="home-btn" style="display:inline-block; margin-bottom:24px; font-weight:bold; color:#222; text-decoration:none;">
-  ← 홈으로 돌아가기
-</a>
   
   <style>
     body {
@@ -74,6 +69,13 @@
 </head>
 
 <body>
+
+  <!-- 홈으로 돌아가기 버튼 -->
+  <a href="index.html" class="home-btn"
+     style="display:inline-block; margin:24px; font-weight:bold; color:#222; text-decoration:none;">
+    ← 홈으로 돌아가기
+  </a>
+  
   <div class="interview-wrap">
     <div class="interview-title">이예지 인터뷰</div>
     <img src="work/work4_main.png" alt="이예지 이미지" class="interview-img">
